controller method thant handles DELETE on /comments/{id} added. Authentification controller added with method POST on /auth. Spring Security configuration added. All endpoint are (permitsAll) except DELETE on /comments/** --> this one have to be authenticated /// All works fine
