# spring-server/src/main/java/io/javalovers/service/CommentService.java
@@ -8,6 +8,8 @@ import java.util.List;
 public interface CommentService {
     CommentEntity getCommentById(Long id);
 
+    CommentEntity deleteCommentById(Long id);
+
     List<CommentEntity> getCommentList();
 
     CommentEntity addComment(CommentEntity comment);
